--- a/clindx-backend/config/database.yml
+++ b/clindx-backend/config/database.yml
@@ -1,9 +1,22 @@
-development:
+default: &default
   adapter: postgresql
   encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+
+development:
+  <<: *default
   database: clindx_dev
-  pool: 5
   username: postgres
   password:
+  host: localhost
+
+test:
+  <<: *default
+  database: clindx_test
+  username: postgres
+  password:
+  host: localhost
+
 production:
+  <<: *default
   url: <%= ENV["DATABASE_URL"] %>
