--- a/clindx-ml/requirements.txt
+++ b/clindx-ml/requirements.txt
@@ -1,11 +1,11 @@
-fastapi
-uvicorn
-pydantic
-numpy
-pandas
-scikit-learn
-joblib
+fastapi==0.110.0
+uvicorn==0.29.0
+pydantic==2.6.4
+
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
 
 torch==2.1.2
-transformers==4.36.2
-sentencepiece
+transformers==4.40.2
