--- a/clindx-ml/requirements.txt
+++ b/clindx-ml/requirements.txt
@@ -7,5 +7,6 @@ pandas==2.2.2
 scikit-learn==1.4.2
 joblib==1.4.2
 
-torch==2.1.2
+# Optional HF (lazy-loaded only)
+torch==2.1.0+cpu ; platform_system != "Windows"
 transformers==4.40.2
